feat: Upgrade to JDK17